--- a/compress-image.html
+++ b/compress-image.html
@@ -102,6 +102,25 @@
   <p>Reduce image size without losing quality. Fast, private, and free.</p>
 
   <input type="file" id="imageInput" accept="image/*">
+  <div id="previewBox" style="
+  margin-top:15px;
+  width:100%;
+  max-width:260px;
+  height:260px;
+  border:1px dashed #ccc;
+  border-radius:10px;
+  display:none;
+  align-items:center;
+  justify-content:center;
+  overflow:hidden;
+  background:#f9fafb;
+">
+  <img id="previewImage" style="
+    max-width:100%;
+    max-height:100%;
+    object-fit:contain;
+  ">
+</div>
 
   <label>Compression Quality: <span id="qualityValue">0.8</span></label>
   <input type="range" id="quality" min="0.1" max="1" step="0.1" value="0.8">
@@ -119,6 +138,22 @@
   const qualitySlider = document.getElementById('quality');
   const qualityValue = document.getElementById('qualityValue');
   const resultDiv = document.getElementById('result');
+  const previewBox = document.getElementById('previewBox');
+const previewImage = document.getElementById('previewImage');
+  const imageInput = document.getElementById('imageInput');
+
+imageInput.addEventListener('change', () => {
+  const file = imageInput.files[0];
+  if (!file) return;
+
+  const reader = new FileReader();
+  reader.onload = e => {
+    previewImage.src = e.target.result;
+    previewBox.style.display = 'flex';
+  };
+  reader.readAsDataURL(file);
+}); 
+  
   
 
   qualitySlider.addEventListener('input', () => {
