--- a/resize-image.html
+++ b/resize-image.html
@@ -74,7 +74,7 @@
 
 <main>
   <h1>Resize Image Online</h1>
-  <p>Change image dimensions instantly without uploading.</p>
+  <p>Resize images instantly, with complete privacy.</p>
 
   <input type="file" id="imageInput" accept="image/*">
 
