--- a/jpg-to-png.html
+++ b/jpg-to-png.html
@@ -1,4 +1,11 @@
- <style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>JPG to PNG Online – Pixora</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
@@ -31,7 +38,7 @@
       box-shadow: 0 10px 25px rgba(0,0,0,0.05);
     }
 
-    input[type="file"], input[type="number"] {
+    input[type="file"] {
       width: 100%;
       margin: 10px 0;
       padding: 8px;
@@ -52,40 +59,58 @@
     button:hover {
       background: #4338ca;
     }
+
+    .note {
+      margin-top: 15px;
+      font-size: 13px;
+      color: #555;
+      text-align: center;
+    }
   </style>
-<h1>JPG to PNG Online</h1>
-<p>Convert JPG images to PNG instantly, with complete privacy.</p>
+</head>
 
-<input type="file" id="imageInput" accept="image/jpeg">
+<body>
 
-<div id="previewBox" style="
-  margin-top:15px;
-  width:100%;
-  max-width:260px;
-  height:260px;
-  border:1px dashed #ccc;
-  border-radius:10px;
-  display:none;
-  align-items:center;
-  justify-content:center;
-  overflow:hidden;
-  background:#f9fafb;
-">
-  <img id="previewImage" style="
-    max-width:100%;
-    max-height:100%;
-    object-fit:contain;
+<header>
+  <div class="logo"></div>
+  <div>
+    <div style="font-weight:600;">Pixora</div>
+    <div style="font-size:12px;color:#555;">Your image never leaves your device</div>
+  </div>
+</header>
+
+<main>
+  <h1>JPG to PNG Online</h1>
+  <p>Convert JPG images to PNG instantly, with complete privacy.</p>
+
+  <input type="file" id="imageInput" accept="image/jpeg">
+
+  <div id="previewBox" style="
+    margin-top:15px;
+    width:100%;
+    max-width:260px;
+    height:260px;
+    border:1px dashed #ccc;
+    border-radius:10px;
+    display:none;
+    align-items:center;
+    justify-content:center;
+    overflow:hidden;
+    background:#f9fafb;
   ">
-</div>
+    <img id="previewImage" style="max-width:100%;max-height:100%;object-fit:contain;">
+  </div>
 
-<button onclick="convertToPNG()">Convert & Download</button>
+  <button onclick="convertToPNG()">Convert & Download</button>
 
-<div id="result" style="margin-top:15px;font-size:14px;color:#333;"></div>
+  <div id="result" style="margin-top:15px;font-size:14px;color:#333;"></div>
 
-<div class="note">
-  100% client-side · No upload · Secure & private  
-  <br><a href="index.html">← Back to Pixora</a>
-</div>
+  <div class="note">
+    100% client-side · No upload · Secure & private  
+    <br><a href="index.html">← Back to Pixora</a>
+  </div>
+</main>
+
 <script>
   const imageInput = document.getElementById('imageInput');
   const previewBox = document.getElementById('previewBox');
@@ -142,3 +167,6 @@
     }, 'image/png');
   }
 </script>
+
+</body>
+</html>
