--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
   <meta charset="UTF-8">
   <title>Pixora – Simple Tools for Creators</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <style>
+    a {
+      color: #4f46e5;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+   </style>
 </head>
 <body style="margin:0;font-family:Arial, sans-serif;">
 
@@ -19,13 +30,13 @@
   <h1>Pixora</h1>
   <p>Simple tools for creators.</p>
 
-  <h2>Tools coming soon</h2>
-  <ul>
-    <li>Compress Image Online</li>
-    <li>Resize Image Online</li>
-    <li>JPG to PNG</li>
-    <li>PNG to JPG</li>
-    <li>Image to WebP</li>
+  <h2>Available Tools</h2>
+  <ul style="line-height:1.8;">
+  <li><a href="compress-image.html">Compress Image</a></li>
+  <li><a href="resize-image.html">Resize Image</a></li>
+  <li><a href="jpg-to-png.html">JPG to PNG</a></li>
+  <li><a href="png-to-jpg.html">PNG to JPG</a></li>
+  <li><a href="image-to-webp.html">Image to WebP</a></li>
   </ul>
 </main>
 
