--- a/index.html
+++ b/index.html
@@ -103,6 +103,33 @@
       color: #666;
       padding: 20px;
     }
+    .categories {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  margin-bottom: 25px;
+  flex-wrap: wrap;
+}
+
+.cat {
+  padding: 8px 16px;
+  border-radius: 20px;
+  border: 1px solid #ddd;
+  background: #fff;
+  cursor: pointer;
+  font-size: 14px;
+  color: #333;
+}
+
+.cat:hover {
+  background: #f0f1f5;
+}
+
+.cat.active {
+  background: #4f46e5;
+  color: #fff;
+  border-color: #4f46e5;
+}
   </style>
 </head>
 
@@ -121,6 +148,12 @@
   <section class="hero">
     <h1>Every image tool you need</h1>
     <p>Fast, private, and 100% client-side image tools.</p>
+  </section>
+  <section class="categories">
+  <button class="cat active">All</button>
+  <button class="cat">Compress</button>
+  <button class="cat">Resize</button>
+  <button class="cat">Convert</button>
   </section>
 
   <section class="tools-grid">
