--- a/compress-image.html
+++ b/compress-image.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Compress Image Online – Pixora</title>
+<title>Compress Image Online – Reduce Image Size Without Losing Quality | Pixora</title>
   <meta name="description" content="Compress images online for free. Your image never leaves your device. Fast, secure, and private image compression.">
+  <meta name="robots" content="index, follow">
+
+<link rel="canonical" href="https://mahmadul-rgb.github.io/pixora/compress-image.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
