--- a/resize-image.html
+++ b/resize-image.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Resize Image Online – Pixora</title>
+  <title>Resize Image Online – Change Image Dimensions Instantly | Pixora</title>
   <meta name="description" content="Resize images online for free. Change image width and height instantly. Your image never leaves your device.">
+  <meta name="robots" content="index, follow">
+
+<link rel="canonical" href="https://mahmadul-rgb.github.io/pixora/resize-image.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
