--- a/jpg-to-png.html
+++ b/jpg-to-png.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JPG to PNG Online – Pixora</title>
+  <title>JPG to PNG Converter – Convert Images Instantly | Pixora</title>
+  <meta name="description" content="Convert JPG images to PNG format instantly. Fast, private, and secure image conversion. No upload required.">
+  <meta name="robots" content="index, follow">
+
+<link rel="canonical" href="https://mahmadul-rgb.github.io/pixora/jpg-to-png.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
