--- a/png-to-jpg.html
+++ b/png-to-jpg.html
@@ -3,9 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PNG to JPG Online</title>
+<title>PNG to JPG Converter – Convert Images Instantly | Pixora</title>
+<meta name="description" content="Convert PNG images to JPG format instantly. Fast, private, and secure image conversion. No upload required.">
+<meta name="robots" content="index, follow">
 
-<style>
+<link rel="canonical" href="https://mahmadul-rgb.github.io/pixora/png-to-jpg.html">
+  <style>
   body {
     margin: 0;
     font-family: Arial, sans-serif;
