--- a/image-to-webp.html
+++ b/image-to-webp.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Image to WebP Online – Pixora</title>
-  <meta name="description" content="Convert images to WebP instantly, with complete privacy.">
+  <title>Image to WebP Converter – Optimize Images for Web | Pixora</title>
+  <meta name="description" content="Convert images to WebP format instantly to optimize websites. Fast, private, and secure WebP converter. No upload required.">
+  <meta name="robots" content="index, follow">
+
+<link rel="canonical" href="https://mahmadul-rgb.github.io/pixora/image-to-webp.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
