--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Pixora offers fast, private, 100% client-side image tools. Compress images, resize photos, convert JPG to PNG, PNG to JPG, and WebP instantly without uploading.">
 
 <meta name="robots" content="index, follow">
+  <meta name="google-site-verification" content="YgYI4M8YxyZRhXl79CmzVTcg8ndqSiVRKK-tKhu4SAo" />
 
 <link rel="canonical" href="https://mahmadul-rgb.github.io/pixora/">
 
