--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 <title>Pixora – Free Online Image Tools (Compress, Resize, Convert)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Pixora offers fast, private, 100% client-side image tools. Compress images, resize photos, convert JPG to PNG, PNG to JPG, and WebP instantly without uploading.">
