--- a/compress-image.html
+++ b/compress-image.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
 <title>Compress Image Online – Reduce Image Size Without Losing Quality | Pixora</title>
   <meta name="description" content="Compress images online for free. Your image never leaves your device. Fast, secure, and private image compression.">
   <meta name="robots" content="index, follow">
