--- a/image-to-webp.html
+++ b/image-to-webp.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <title>Image to WebP Converter – Optimize Images for Web | Pixora</title>
   <meta name="description" content="Convert images to WebP format instantly to optimize websites. Fast, private, and secure WebP converter. No upload required.">
   <meta name="robots" content="index, follow">
