--- a/resize-image.html
+++ b/resize-image.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <title>Resize Image Online – Change Image Dimensions Instantly | Pixora</title>
   <meta name="description" content="Resize images online for free. Change image width and height instantly. Your image never leaves your device.">
   <meta name="robots" content="index, follow">
