--- a/png-to-jpg.html
+++ b/png-to-jpg.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PNG to JPG Converter – Convert Images Instantly | Pixora</title>
 <meta name="description" content="Convert PNG images to JPG format instantly. Fast, private, and secure image conversion. No upload required.">
