--- a/jpg-to-png.html
+++ b/jpg-to-png.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <title>JPG to PNG Converter – Convert Images Instantly | Pixora</title>
   <meta name="description" content="Convert JPG images to PNG format instantly. Fast, private, and secure image conversion. No upload required.">
   <meta name="robots" content="index, follow">
