--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     }
 
     .logo {
-      width: 36px;
-      height: 36px;
-      background: #4f46e5;
-      border-radius: 8px;
+  width: 36px;
+  height: 36px;
+  border-radius: 8px;
+  object-fit: contain;
     }
 
     .brand-title {
@@ -143,7 +143,7 @@
 <body>
 
 <header>
-  <div class="logo"></div>
+  <img src="logo.png" alt="Pixora logo" class="logo">
   <div>
     <div class="brand-title">Pixora</div>
     <div class="brand-sub">Your image never leaves your device</div>
