--- a/png-to-jpg.html
+++ b/png-to-jpg.html
@@ -27,10 +27,10 @@
   }
 
   .logo {
-    width: 36px;
-    height: 36px;
-    background: #4f46e5;
-    border-radius: 8px;
+  width: 36px;
+  height: 36px;
+  border-radius: 8px;
+  object-fit: contain;
   }
 
   main {
@@ -96,7 +96,7 @@
 <body>
 
 <header>
-  <div class="logo"></div>
+  <img src="logo.png" alt="Pixora logo" class="logo">
   <div>
     <div style="font-weight:600;">Pixora</div>
     <div style="font-size:12px;color:#555;">Your image never leaves your device</div>
