--- a/image-to-webp.html
+++ b/image-to-webp.html
@@ -28,10 +28,10 @@
     }
 
     .logo {
-      width: 36px;
-      height: 36px;
-      background: #4f46e5;
-      border-radius: 8px;
+  width: 36px;
+  height: 36px;
+  border-radius: 8px;
+  object-fit: contain;
     }
 
     header .title {
@@ -114,7 +114,7 @@
 <body>
 
 <header>
-  <div class="logo"></div>
+  <img src="logo.png" alt="Pixora logo" class="logo">
   <div>
     <div class="title">Pixora</div>
     <div class="subtitle">Your image never leaves your device</div>
