--- a/index.html
+++ b/index.html
@@ -195,6 +195,12 @@
       <p>Convert images to modern WebP format.</p>
     </a>
 
+    <a class="tool-card" href="image-to-pdf.html">
+  <div class="tool-icon">📄</div>
+  <h3>Image to PDF</h3>
+  <p>Convert images into a PDF instantly.</p>
+    </a>
+
   </section>
 
 </main>
