--- a/index.html
+++ b/index.html
@@ -200,6 +200,11 @@
   <h3>Image to PDF</h3>
   <p>Convert images into a PDF instantly.</p>
     </a>
+    <a class="tool-card" href="crop-image.html">
+  <div class="tool-icon">✂️</div>
+  <h3>Crop Image</h3>
+  <p>Crop images online instantly. Free & private.</p>
+    </a>
 
   </section>
 
