--- a/index.html
+++ b/index.html
@@ -205,6 +205,11 @@
   <h3>Crop Image</h3>
   <p>Crop images online instantly. Free & private.</p>
     </a>
+    <a class="tool-card" href="exif-remover.html">
+  <div class="tool-icon">🛡️</div>
+  <h3>Remove Image Metadata</h3>
+  <p>Delete hidden EXIF data like location and device info.</p>
+    </a>
 
   </section>
 
