--- a/exif-remover.html
+++ b/exif-remover.html
@@ -91,6 +91,32 @@
   <input type="file" id="imageInput" accept="image/*">
 
   <button onclick="removeMetadata()">Remove Metadata & Download</button>
+  <section style="margin-top:20px;font-size:14px;color:#444;line-height:1.6;">
+  <h2 style="font-size:18px;">Why remove image metadata?</h2>
+  <p>
+    Photos often contain hidden information such as GPS location, device model,
+    camera settings, and timestamps. This data is called <strong>EXIF metadata</strong>.
+    Removing it protects your privacy before sharing images online.
+  </p>
+
+  <h3 style="font-size:16px;">How Pixora removes EXIF data</h3>
+  <p>
+    Pixora processes images entirely in your browser using canvas technology.
+    When the image is re-exported, all metadata is automatically stripped.
+    Your image is never uploaded to any server.
+  </p>
+
+  <h3 style="font-size:16px;">Frequently Asked Questions</h3>
+
+  <p><strong>Is this tool really offline?</strong><br>
+  Yes. Everything happens on your device. No uploads, no tracking.</p>
+
+  <p><strong>Will image quality change?</strong><br>
+  No visible quality loss. Only hidden metadata is removed.</p>
+
+  <p><strong>Does it remove GPS location?</strong><br>
+  Yes. All EXIF data including location is completely removed.</p>
+  </section>
 
   <div class="note">
     ✔ All metadata removed automatically<br>
