--- a/image-size-checker.html
+++ b/image-size-checker.html
@@ -99,6 +99,74 @@
     100% client-side • No upload • Secure & private  
     <br><a href="index.html">← Back to Pixora</a>
   </div>
+  <script>
+  const imageInput = document.getElementById("imageInput");
+  const checkBtn = document.getElementById("checkBtn");
+  const resultBox = document.getElementById("result");
+
+  const fileNameEl = document.getElementById("fileName");
+  const fileSizeEl = document.getElementById("fileSize");
+  const dimensionsEl = document.getElementById("dimensions");
+  const aspectRatioEl = document.getElementById("aspectRatio");
+  const orientationEl = document.getElementById("orientation");
+  const formatEl = document.getElementById("format");
+  const megapixelsEl = document.getElementById("megapixels");
+
+  let selectedFile = null;
+
+  imageInput.addEventListener("change", () => {
+    selectedFile = imageInput.files[0];
+    if (!selectedFile) return;
+
+    checkBtn.style.display = "block";
+    resultBox.style.display = "none";
+  });
+
+  checkBtn.addEventListener("click", () => {
+    if (!selectedFile) return;
+
+    fileNameEl.textContent = selectedFile.name;
+    fileSizeEl.textContent = formatSize(selectedFile.size);
+    formatEl.textContent = selectedFile.type.replace("image/", "").toUpperCase();
+
+    const img = new Image();
+    const reader = new FileReader();
+
+    reader.onload = e => {
+      img.src = e.target.result;
+    };
+
+    img.onload = () => {
+      const w = img.width;
+      const h = img.height;
+
+      dimensionsEl.textContent = `${w} × ${h} px`;
+      aspectRatioEl.textContent = simplifyRatio(w, h);
+
+      if (w > h) orientationEl.textContent = "Landscape";
+      else if (h > w) orientationEl.textContent = "Portrait";
+      else orientationEl.textContent = "Square";
+
+      megapixelsEl.textContent = ((w * h) / 1000000).toFixed(2) + " MP";
+
+      resultBox.style.display = "block";
+    };
+
+    reader.readAsDataURL(selectedFile);
+  });
+
+  function formatSize(bytes) {
+    if (bytes < 1024) return bytes + " B";
+    if (bytes < 1024 * 1024) return (bytes / 1024).toFixed(2) + " KB";
+    return (bytes / (1024 * 1024)).toFixed(2) + " MB";
+  }
+
+  function simplifyRatio(w, h) {
+    const gcd = (a, b) => (b === 0 ? a : gcd(b, a % b));
+    const d = gcd(w, h);
+    return `${w / d}:${h / d}`;
+  }
+  </script>
 </main>
 
 </body>
