--- a/image-size-checker.html
+++ b/image-size-checker.html
@@ -83,7 +83,12 @@
   <h1>Image Size Checker</h1>
   <p>Check image dimensions, resolution, file size, and aspect ratio instantly.</p>
 
+  
   <input type="file" id="imageInput" accept="image/*">
+
+<button id="checkBtn" style="display:none; margin-top:10px;">
+  Check Image Info
+</button>
 
   <div class="result" id="result">
     <div><span class="label">File name:</span> <span id="fileName"></span></div>
