--- a/index.html
+++ b/index.html
@@ -188,6 +188,11 @@
       <h3>PNG to JPG</h3>
       <p>Convert PNG images to JPG format.</p>
     </a>
+    <a class="tool-card" href="image-size-checker.html">
+  <div class="tool-icon">📏</div>
+  <h3>Image Size Checker</h3>
+  <p>Check image dimensions, file size, aspect ratio, and resolution instantly.</p>
+    </a>
 
     <a class="tool-card" href="image-to-webp.html">
       <div class="tool-icon">⚡</div>
