--- a/image-to-webp.html
+++ b/image-to-webp.html
@@ -112,14 +112,16 @@
   </style>
 </head>
 <body>
-
 <header>
-  <img src="logo.png" alt="Pixora logo" class="logo">
-  <div>
-    <div class="title">Pixora</div>
-    <div class="subtitle">Your image never leaves your device</div>
-  </div>
+  <a href="index.html" style="display:flex; align-items:center; gap:12px; text-decoration:none; color:inherit;">
+    <img src="logo.png" alt="Pixora logo" class="logo">
+    <div>
+      <div style="font-weight:600;">Pixora</div>
+      <div style="font-size:12px;color:#555;">Your image never leaves your device</div>
+    </div>
+  </a>
 </header>
+
 
 <main>
   <h1>Image to WebP Online</h1>
