--- a/png-to-jpg.html
+++ b/png-to-jpg.html
@@ -96,11 +96,13 @@
 <body>
 
 <header>
-  <img src="logo.png" alt="Pixora logo" class="logo">
-  <div>
-    <div style="font-weight:600;">Pixora</div>
-    <div style="font-size:12px;color:#555;">Your image never leaves your device</div>
-  </div>
+  <a href="index.html" style="display:flex; align-items:center; gap:12px; text-decoration:none; color:inherit;">
+    <img src="logo.png" alt="Pixora logo" class="logo">
+    <div>
+      <div style="font-weight:600;">Pixora</div>
+      <div style="font-size:12px;color:#555;">Your image never leaves your device</div>
+    </div>
+  </a>
 </header>
 
 <main>
