--- a/index.html
+++ b/index.html
@@ -275,6 +275,52 @@
   </section>
 
 </main>
+  <section style="max-width:1100px;margin:60px auto 40px;padding:0 20px;">
+  <h2 style="text-align:center;font-size:24px;margin-bottom:20px;">
+    Frequently Asked Questions
+  </h2>
+
+  <div style="max-width:800px;margin:auto;line-height:1.7;color:#333;font-size:15px;">
+
+    <h3>Is Pixora free to use?</h3>
+    <p>
+      Yes. Pixora provides free online image tools that you can use instantly
+      without creating an account. Some tools may have fair usage limits to
+      ensure performance and availability for everyone.
+    </p>
+
+    <h3>Do my images get uploaded to a server?</h3>
+    <p>
+      No. Pixora works entirely inside your browser. Your images are processed
+      locally on your device and are never uploaded to any server.
+    </p>
+
+    <h3>Is Pixora safe and private?</h3>
+    <p>
+      Yes. Since all processing happens on your device, your files remain private
+      and secure at all times.
+    </p>
+
+    <h3>Can I use Pixora on mobile devices?</h3>
+    <p>
+      Absolutely. Pixora is fully responsive and works on mobile phones,
+      tablets, and desktop computers.
+    </p>
+
+    <h3>What image formats are supported?</h3>
+    <p>
+      Pixora supports common image formats such as JPG, PNG, and WebP.
+      Supported formats may vary depending on the specific tool.
+    </p>
+
+    <h3>Do I need to create an account?</h3>
+    <p>
+      No account is required for basic usage. Advanced features may be
+      introduced in the future to support ongoing development and maintenance.
+    </p>
+
+  </div>
+</section>
 
 <footer class="footer">
   <div class="footer-grid">
