--- a/image-to-pdf.html
+++ b/image-to-pdf.html
@@ -97,8 +97,9 @@ button.loading::after {
   <p>Convert images to a PDF instantly. Free, private, and secure.</p>
 
   <input type="file" id="imageInput" accept="image/*" multiple>
-  <p style="font-size:12px;color:#666; margin-top:6px;">
-  Recommended: up to 20–30 images depending on device RAM
+  <p style="font-size:12px;color:#666;margin-top:6px;">
+  Free version: Convert up to <strong>20 images</strong> per PDF.
+  Optimized for fast, private, in-browser processing.
   </p>
 
   <button id="convertBtn" onclick="convertToPDF()">Convert to PDF</button>
