--- a/compress-image.html
+++ b/compress-image.html
@@ -109,6 +109,10 @@
   <p>Reduce image size without losing quality. Fast, private, and free.</p>
 
   <input type="file" id="imageInput" accept="image/*">
+  <p style="font-size:12px;color:#666;margin-top:6px;">
+  Free version: Maximum image size <strong>5 MB</strong>.
+  Larger images may be supported in future updates.
+  </p>
   <div id="previewBox" style="
   margin-top:15px;
   width:100%;
@@ -178,6 +182,12 @@ function compressImage() {
   if (!fileInput.files.length) {
     alert('Please select an image');
     return;
+    const file = document.getElementById("imageInput").files[0];
+
+if (file.size > 5 * 1024 * 1024) {
+  alert("Free version supports images up to 5 MB only.");
+  return;
+}
   }
 
   const file = fileInput.files[0];
